--- a/_posts/2013-04-13-Then.vs.Now.markdown
+++ b/_posts/2013-04-13-Then.vs.Now.markdown
@@ -1,17 +1,22 @@
 ---
 layout: post
 title: Life Without Computers
-published: yes
+modified: 2013-04-13
+categories: Musings
+tags: [Computers, Youth, Atari, Video Games]
+comments: yes
+image:
+  feature:
 ---
 
-Children of the late 60's and 70's such as myself are unique in that we are the last generation to know life without computers.  A smaller subset of this group is the last to remember life without video games.  I was born in 1969 and happen to fall into both groups.  
+Children of the late 60's and 70's such as myself are unique in that we are the last generation to know life without computers.  A smaller subset of this group is the last to remember life without video games.  I was born in 1969 and happen to fall into both groups.
 
 ### Enter the Video Game
 It must have been around 1974 (Pong came out in 1972) when my friend's family got pong.  I can remember only having a passing interest in the game.  It was black and white while my toys had color.  And it required dexterity that I woefully lacked.
 
 In 1976 the Atari 2600 came out and with it color.  The initial price of Atari according to Wikipedia was a whopping $199.00.  I think it is safe to assume that my parents didn't buy our Atari until later when the price was more affordable.  You have to remember, spending $199 on what my parents would have regarded as a toy would never have happened.
 
-And with Atari, my world changed.  Most likely my age had something to do with it.  Maybe it was because it had color, or that I could to find treasure (Adventure), or pilot a ship and blow up asteroids (Asteroids).  It wasn't long before I had developed tendonitis from playing Asteroids so much.  By then I was hooked.  My love affair with video games would continue to this day.  While I rarely play due to time and family commitments, I still love the ability to immerse into another reality.  
+And with Atari, my world changed.  Most likely my age had something to do with it.  Maybe it was because it had color, or that I could to find treasure (Adventure), or pilot a ship and blow up asteroids (Asteroids).  It wasn't long before I had developed tendonitis from playing Asteroids so much.  By then I was hooked.  My love affair with video games would continue to this day.  While I rarely play due to time and family commitments, I still love the ability to immerse into another reality.
 
 Video games when combined with an active and developed imagination can produce an alternate reality as real as actual reality.  Back then the effect was generated more by our own minds (let's face it, graphics back then were brutal).  With today's systems and the systems of tomorrow whose graphics are visually close to reality, the mental requirement to attain the same level of immersion is much less.  For a person with an active imagination this only makes that immersion more potent.  It wasn't until much later that I would find out how potent they could be.
 
@@ -31,9 +36,9 @@ From there I moved up to a Commodore 64 with a 1521 Disk drive (5.25" baby!), an
 
 Now what? How I made the jump from buying a modem to actually dialing into somewhere I can't recall.  I must have read about it in a magazine and used a number of a bulletin board service (BBS) listed in the magazine.  Back then we didn't have anything like unlimited calling, calls >5 miles cost money and I can recall being chastised a lot over phone charges.
 
-I began to use my modem to download games for the Commodore 64 and had many times when my all-night download to get a game that was maybe 500k in size would be corrupted by my Mom picking up the phone to place a call.  
+I began to use my modem to download games for the Commodore 64 and had many times when my all-night download to get a game that was maybe 500k in size would be corrupted by my Mom picking up the phone to place a call.
 
-Eventually I made the next logical leap at that time to a mighty Packard-Bell with a 286 processor.  My modem started getting faster as well, going from 300 to 1200, to 2400, to 9600, to 14400, to 19200, etc.  Mind you we the actual throughput at the zenith was only around 4-5k per second.  
+Eventually I made the next logical leap at that time to a mighty Packard-Bell with a 286 processor.  My modem started getting faster as well, going from 300 to 1200, to 2400, to 9600, to 14400, to 19200, etc.  Mind you we the actual throughput at the zenith was only around 4-5k per second.
 
 I won't bore you with all of my BBS day exploits, but suffice it to say I did eventually get my own phone number, ran a number of BBS's myself, was part of the FidoNet network with linked people in forums across the globe which was amazing for the time.
 
