--- a/_posts/2013-04-13-Then.vs.Now.markdown
+++ b/_posts/2013-04-13-Then.vs.Now.markdown
@@ -18,6 +18,11 @@ It must have been around 1974 (Pong came out in 1972) when my friend's family go
 
 In 1976 the Atari 2600 came out and with it color.  The initial price of Atari according to Wikipedia was a whopping $199.00.  I think it is safe to assume that my parents didn't buy our Atari until later when the price was more affordable.  You have to remember, spending $199 on what my parents would have regarded as a toy would never have happened.
 
+<figure>
+    <a href="/images/atari.jpg"><img src="/images/atari.jpg"></a>
+    <figcaption>Atari 2600</figcaption>
+</figure>
+
 And with Atari, my world changed.  Most likely my age had something to do with it.  Maybe it was because it had color, or that I could to find treasure (Adventure), or pilot a ship and blow up asteroids (Asteroids).  It wasn't long before I had developed tendonitis from playing Asteroids so much.  By then I was hooked.  My love affair with video games would continue to this day.  While I rarely play due to time and family commitments, I still love the ability to immerse into another reality.
 
 Video games when combined with an active and developed imagination can produce an alternate reality as real as actual reality.  Back then the effect was generated more by our own minds (let's face it, graphics back then were brutal).  With today's systems and the systems of tomorrow whose graphics are visually close to reality, the mental requirement to attain the same level of immersion is much less.  For a person with an active imagination this only makes that immersion more potent.  It wasn't until much later that I would find out how potent they could be.
@@ -29,12 +34,22 @@ Gaining anything more than a passing internet in computers was difficult with th
 
 But when I saw Wargames my imagination ran wild.  The concept of dialing into a computer seemed exotic and exciting to me.  And so, after much saving of my paper route money, I was able to purchase a Texas Instruments 99/4A.  I can remember going to Sears with my Father to look at them.  Neither of us had a clue what to buy.  We didn't have the internet to look up reviews and magazines were not readily available in our area.
 
+<figure>
+    <a href="/images/ti994a.jpg"><img src="/images/ti994a.jpg"></a>
+    <figcaption>Ti99/4a</figcaption>
+</figure>
+
 In the end I found myself trying to decide between a computer with a membrane keyboard and one with keys (the TI), my Dad didn't like the membrane keys which had already wore through in the store so I bought the TI99/4A and Hunt the Wumpus.
 
 In general I didn't do much with the TI99/4A.  I mostly played hunt the Wumpus and on occasion tried to type in program code from a TI99/4A magazine.  Things like syntax and keyboard errors were somewhat beyond me at that point and remarkably my code never ran.  For a short period of time my buddy Paul and I tinkered around with saving data to a cassette recorder that had an input the TI could use.  I think the word that best describes the process is "Hinky".
 
 ### A Online Cowboy is Born
 From there I moved up to a Commodore 64 with a 1521 Disk drive (5.25" baby!), and finally -- a 300 Baud Modem.  This "Advanced" piece of hardware plugged directly into the phone and didn't need a coupler like in Wargames.  Oh did I feel elite.
+
+<figure>
+    <a href="/images/commodore-64.jpg"><img src="/images/commodore-64.jpg"></a>
+    <figcaption>Commodore 64</figcaption>
+</figure>
 
 Now what? How I made the jump from buying a modem to actually dialing into somewhere I can't recall.  I must have read about it in a magazine and used a number of a bulletin board service (BBS) listed in the magazine.  Back then we didn't have anything like unlimited calling, calls >5 miles cost money and I can recall being chastised a lot over phone charges.
 
