--- a/_posts/2025-03-30-Derailed.md
+++ b/_posts/2025-03-30-Derailed.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Lost Wisdom, Fried Fry & Getting Derailed"
+title: "Lost Wisdom, Fried Fish & Getting Derailed"
 date: 2025-03-30 17:04:48
 categories: dental weekend derailed
 ---
