--- a/_posts/2025-04-19-Hands-Off.md
+++ b/_posts/2025-04-19-Hands-Off.md
@@ -11,10 +11,18 @@ categories: protest
 
 Today we joined the "Hands Off!" protest in Yorkville, IL with around four hundred other like-minded protesters. We made protest signs and chanted protest phrases. And we did it peacefully, in full view of the police without incident.
 
-And how was the opposition response you might be wondering? I think it could best be described as: Lackluster, Lame, Limp-Dicked? Yeah, that pretty well describes the five Pro-Trump counter-protesters with their ridiculous Pro-Trump fantasy propaganda.
+{% maincolumn 'assets/img/protest.jpg' 'Hands Off! Yorkville Protest again Trump/Republican Corruption' %}
+
+{% marginfigure 'mf-id-2' 'assets/img/handmaid.jpg' %}And how was the opposition response you might be wondering? I think it could best be described as: Lackluster, Lame, Limp-Dicked? Yeah, that pretty well describes the five Pro-Trump counter-protesters with their ridiculous Pro-Trump fantasy propaganda.
 
 What was amazing about this protest is that Kendall county has always traditionally been a "red" county. Not anymore if today is an indication. We certainly sent a clear message in the local elections a few weeks ago where all Republican candidates failed to get elected.
 
 But if we have learned anything from the last presidential election, we cannot afford to make assumptions. Getting apathetic people to vote will continue to be an ongoing effort that we all need to put in time and volunteer to get the word out.
 
-The fight for Democracy has never been more important.
+{% marginfigure 'mf-id-3' 'assets/img/no-kings.jpg' %}The fight for Democracy has never been more important. Peaceful protest is an important American tradition that is our democratic right.
+
+It played a significant role in changing the hearts and minds of the American people back in the late sixties and early seventies and helped to bring the end of the American involvement in the Vietnam war.
+
+It can have an impact today as well. America has never faced the threat as insidious and dangerous as what it faces today from Trump and the GOP.
+
+Peaceful protest can lead toward changing peoples minds, it can open the minds of people who have not voted in the past to exercise their rights and make their voice known through the ballot box. Get involved today, America needs your help.
